[project]
name = "bristol-microservice-auth"
version = "0.1.0"
description = "Аутентификация для FastAPI"
authors = [{ name = "Vitaliy.Mikhalchenko <Vitaliy.Mikhalchenko@bristolcapital.ru>" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "fastapi[all]>=0.105.0,<0.200.0",
]

[tool.uv]
allow-insecure-host = ["pypi.org"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bristol_microservice_auth"]
